[package]
name = "rplidar_drv_rs"
description = "Driver for Slamtec RPLIDAR series laser sensors"
version = "0.7.0"
license = "BSD-2-Clause"
repository = "https://github.com/RandomStudio/rplidar.rs"
keywords = ["Slamtec", "Rplidar", "Driver"]
authors = [
    "Tony Huang <tony@slamtec.com>",
    "Stephen Buchanan <webtvmaster@gmail.com>",
]
edition = "2021"
exclude = [".gitignore", ".travis.yml", ".cargo/config"]

[badges]
travis-ci = { repository = "RandomStudio/rplidar.rs", branch = "main" }

[lib]
name = "rplidar_drv"
path = "src/lib.rs"

[dependencies]
byteorder = "1.2.7"
rpos_drv = { path = "rpos_drv" }
crc = "1.8.1"

[dev-dependencies]
hex-slice = "0.1.4"
serialport = { version = "4.2.0", default-features = false, features = [] }


[workspace]
members = ["rpos_drv"]
resolver = "2"

[patch.crates-io]
rpos_drv = { path = "rpos_drv" }
